workshop03/code_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codens
  labels:
    app: code
