workshop03/code_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-ingress
  namespace: codens
  labels:
    app: codeapp
    name: cond-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: code-167.172.7.185.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: code-svc
            port:
              number: 80
